--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prisma:reset": "prisma migrate reset -f "
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
